// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MLocationBody <MLocationBody> with error displays correct fallback content when map_style_url is misconfigured 1`] = `
<div
  className="mx_EventTile_body mx_MLocationBody"
>
  <span
    className="mx_EventTile_tileError"
  >
    Unable to load map: This homeserver is not configured correctly to display maps, or the configured map server may be unreachable.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> with error displays correct fallback content without error style when map_style_url is not configured 1`] = `
<div
  className="mx_EventTile_body mx_MLocationBody"
>
  <span
    className=""
  >
    Unable to load map: This homeserver is not configured to display maps.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> without error renders map correctly 1`] = `
<MLocationBody
  highlightLink=""
  highlights={Array []}
  mediaEventHelper={Object {}}
  mxEvent={
    Object {
      "content": Object {
        "body": "Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000",
        "geo_uri": "geo:51.5076,-0.1276",
        "msgtype": "m.location",
        "org.matrix.msc1767.text": "Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000",
        "org.matrix.msc3488.asset": Object {
          "type": "m.pin",
        },
        "org.matrix.msc3488.location": Object {
          "description": "Human-readable label",
          "uri": "geo:51.5076,-0.1276",
        },
        "org.matrix.msc3488.ts": 252523,
      },
      "event_id": "$2",
      "type": "org.matrix.msc3488.location",
    }
  }
  onHeightChanged={[MockFunction]}
  onMessageAllowed={[MockFunction]}
  permalinkCreator={Object {}}
>
  <LocationBodyFallbackContent
    error={[Error: MapStyleUrlNotConfigured]}
    event={
      Object {
        "content": Object {
          "body": "Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000",
          "geo_uri": "geo:51.5076,-0.1276",
          "msgtype": "m.location",
          "org.matrix.msc1767.text": "Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000",
          "org.matrix.msc3488.asset": Object {
            "type": "m.pin",
          },
          "org.matrix.msc3488.location": Object {
            "description": "Human-readable label",
            "uri": "geo:51.5076,-0.1276",
          },
          "org.matrix.msc3488.ts": 252523,
        },
        "event_id": "$2",
        "type": "org.matrix.msc3488.location",
      }
    }
  >
    <div
      className="mx_EventTile_body mx_MLocationBody"
    >
      <span
        className=""
      >
        Unable to load map: This homeserver is not configured to display maps.
      </span>
      <br />
      Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
    </div>
  </LocationBodyFallbackContent>
</MLocationBody>
`;
